2005-10-12  Don Allingham  <don@gramps-project.org>
	* src/ReportUtils.py: handle "unknown_gender_name" in parameter arrays

2005-10-11  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: first pass at ancestor map
	* src/data/main*.css: ancestor css styles
	* src/EditPerson.py: handle adding death/birth record correctly

2005-10-11  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/GraphViz.py: Typos.

2005-10-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Add some date events

2005-10-10  Don Allingham  <don@gramps-project.org>
	* src/GrampsDBCallback.py: doc changes
	* src/NameDisplay.py: remove nickname support
	* src/QuestionDialog.py: handle missing icons for pychecker
	* src/Report.py: set a default size for the window (600)
	* src/ReportUtils.py: doc changes, add common_name
	* src/plugins/DetAncestralReport.py:
	* src/Date.py: set default modifier properly, fix compare and sortval
	assignment
	* src/RelLib.py: fix source reference date comparison
	
2005-10-09  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/WriteGedcom.py: fixed error caused by incomplete migration to
	handle-based storage API

2005-10-09  Don Allingham  <don@gramps-project.org>
	* src/Spell.py: give more intelligent error message if spelling
	checker is not found.
	* src/plugins/DescendChart.py: fixed type detection to handle both
	unicode and str.
	* src/plugins/NavWebPage.py: fixed typo in Creative Commons messages

2005-10-08  Don Allingham  <don@gramps-project.org>
	* src/Bookmarks.py: use GrampsDisplay for help
	* src/MergeData.py: use GrampsDisplay for help
	* src/MergePeople.py: use GrampsDisplay for help

2005-10-07  Alex Roitman  <shura@gramps-project.org>
	* doc/grampsxml.dtd: Fix order, add missing contents.

2005-10-07  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Feed in more data
	
2005-10-07  Alex Roitman  <shura@gramps-project.org>